--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 #pages>li>a{
-	font-family: 'Aref Ruqaa', serif;
+font-family: 'Amiri', serif;
 	font-size: 1.5em;
     color: white;
     text-shadow: 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red;
