--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #myNav {
-	margin-top: 3%;
+	margin-top: 2%;
 	background: #2A0A12;
 }
 
@@ -12,8 +12,8 @@
 #pages>li>a{
 font-family: 'Amiri', serif;
 	font-size: 1.5em;
-    color: white;
-    text-shadow: 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red;
+    color: #D8D8D8;
+   // text-shadow: 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red, 0 0 4px red;
 
 }
 
